--- a/SPARQLv1.1
+++ b/SPARQLv1.1
@@ -149,5 +149,22 @@ UNION {
 LIMIT 25
 
 
+--------- Beispiel eines SportEventes ------
+PREFIX schema: <https://schema.org/>
+PREFIX fitness: <http://th-brandenburg.de/ns/kursplanung-fitnessstudio#>
+
+SELECT ?placeName ?locationName ?startDate ?participantGender ?organizerName ?organizerAreaOfExpertise ?endDate ?duration
+WHERE{
+  		?SportsEvent a schema:SportsEvent;
+    		schema:name ?placeName ;
+    		schema:location [schema:name ?locationName] ;
+    		schema:startDate ?startDate;
+    		schema:participant [schema:gender ?participantGender] ;
+    		schema:organizer [schema:name ?organizerName; fitness:areaOfExpertise ?organizerAreaOfExpertise] ;
+			schema:endDate ?endDate ;
+			schema:duration ?duration .
+}
+
+LIMIT 25
 
 
