--- a/SPARQLv1.1
+++ b/SPARQLv1.1
@@ -171,3 +171,34 @@ WHERE{
 LIMIT 25
 
 
+
+------------------------------------- Welcher Kurs findet wann und wo statt?------------------------------------------------------------------------
+
+PREFIX schema: <https://schema.org/>
+PREFIX fitness: <http://th-brandenburg.de/ns/kursplanung-fitnessstudio#>
+
+SELECT ?sportEventName ?locationName ?startDate ?endDate
+WHERE{
+  		?SportsEvent a schema:SportsEvent;
+    		schema:name ?sportEventName ;
+    		schema:location [schema:name ?locationName] ;
+    		schema:startDate ?startDate;
+			schema:endDate ?endDate .
+}
+
+------------------------- 	Wie lange dauert der Kurs?  ------------------------------
+
+PREFIX schema: <https://schema.org/>
+PREFIX fitness: <http://th-brandenburg.de/ns/kursplanung-fitnessstudio#>
+
+SELECT ?sportEventName ?locationName ?startDate ?endDate ?duration
+WHERE{
+  		?SportsEvent a schema:SportsEvent;
+    		schema:name ?sportEventName ;
+    		schema:location [schema:name ?locationName] ;
+    		schema:startDate ?startDate;
+			schema:endDate ?endDate ;
+			schema:duration ?duration .
+}
+
+------------------------- 	Welche Sportausrüstung wird dafür benötigt? ------------------------------
