--- a/SPARQLv1.1
+++ b/SPARQLv1.1
@@ -156,10 +156,10 @@ LIMIT 25
 PREFIX schema: <https://schema.org/>
 PREFIX fitness: <http://th-brandenburg.de/ns/kursplanung-fitnessstudio#>
 
-SELECT ?placeName ?locationName ?startDate ?participantGender ?organizerName ?organizerAreaOfExpertise ?endDate ?duration
+SELECT ?sportEventName ?locationName ?startDate ?participantGender ?organizerName ?organizerAreaOfExpertise ?endDate ?duration
 WHERE{
   		?SportsEvent a schema:SportsEvent;
-    		schema:name ?placeName ;
+    		schema:name ?sportEventName ;
     		schema:location [schema:name ?locationName] ;
     		schema:startDate ?startDate;
     		schema:participant [schema:gender ?participantGender] ;
@@ -202,3 +202,41 @@ WHERE{
 }
 
 ------------------------- 	Welche Sportausrüstung wird dafür benötigt? ------------------------------
+
+PREFIX schema: <https://schema.org/>
+PREFIX fitness: <http://th-brandenburg.de/ns/kursplanung-fitnessstudio#>
+
+SELECT ?sportEventName ?locationName ?gymEquipment
+WHERE{
+  		?SportsEvent a schema:SportsEvent;
+    		schema:name ?sportEventName ;
+    		schema:location [schema:name ?locationName; fitness:gymEquipment ?gymEquipment] .
+}
+
+
+------------ Durch wen wird der Kurs organisiert und durchgeführt? Warum ist diese Person fachlich dafür geeignet? ------------------------------------------------------------------------
+
+PREFIX schema: <https://schema.org/>
+PREFIX fitness: <http://th-brandenburg.de/ns/kursplanung-fitnessstudio#>
+
+SELECT ?sportEventName ?locationName ?organizerName ?organizerAreaOfExpertise
+WHERE{
+  		?SportsEvent a schema:SportsEvent;
+    		schema:name ?sportEventName ;
+    		schema:location [schema:name ?locationName] ;
+    		schema:organizer [schema:name ?organizerName; fitness:areaOfExpertise ?organizerAreaOfExpertise] .
+}
+
+------------------------------------- An welchen Teilnehmerkreis richtet sich der Kurs? -------------------------------------
+
+PREFIX schema: <https://schema.org/>
+PREFIX fitness: <http://th-brandenburg.de/ns/kursplanung-fitnessstudio#>
+
+SELECT ?sportEventName ?participantTrainingLevel
+WHERE{
+  		?SportsEvent a schema:SportsEvent;
+    		schema:name ?sportEventName ;
+    		schema:location [schema:name ?locationName] ;
+    		schema:participant [fitness:trainingLevel ?participantTrainingLevel] .
+}
+
