--- a/SPARQLv1.1
+++ b/SPARQLv1.1
@@ -234,11 +234,11 @@ WHERE{
 PREFIX schema: <https://schema.org/>
 PREFIX fitness: <http://th-brandenburg.de/ns/kursplanung-fitnessstudio#>
 
-SELECT ?sportEventName ?participantTrainingLevel
+SELECT ?sportEventName ?participantTrainingLevel ?participantGender
 WHERE{
   		?SportsEvent a schema:SportsEvent;
     		schema:name ?sportEventName ;
     		schema:location [schema:name ?locationName] ;
-    		schema:participant [fitness:trainingLevel ?participantTrainingLevel] .
+    		schema:participant [fitness:trainingLevel ?participantTrainingLevel; schema:gender ?participantGender] .
 }
 
