--- a/SPARQLv1.1
+++ b/SPARQLv1.1
@@ -149,7 +149,7 @@ LIMIT 25
 
 
 
-http://fbwsvcdev.th-brandenburg.de:8080/fuseki/dataset.html
+http://fbwsvcdev.th-brandenburg.de:8080/fuseki/dataset.html   ###bitte "TestImport" benutzen###
 
 
 
